# bittorrent

./: .gitignore  Informe.md  README.md  STRUCTURE.md  TESTING_GUIDE.md  config.ini  main.py  prueba.py  requirements.txt  tracker.db  tracker.db-journal  tracker.db.part
bit_lib/: Dockerfile  MANIFEST.yml  pyproject.toml
bit_lib/bit_lib/: __init__.py
bit_lib/bit_lib/const/: __init__.py  c_commands.py  c_proto.py  c_status.py
bit_lib/bit_lib/context/: __init__.py  cache.py  container.py  defaults.py  dispatcher.py  vector_clock.py
bit_lib/bit_lib/core/: __init__.py  client.py  server.py  service.py
bit_lib/bit_lib/errors/: __init__.py  errors.py  resource.py
bit_lib/bit_lib/handlers/: __init__.py  _process.py  crud.py  hander.py  maintenance.py
bit_lib/bit_lib/hooks/: __init__.py  _process.py  actions.py  hook.py
bit_lib/bit_lib/models/: __init__.py  header.py  message.py  responses.py  typing.py
bit_lib/bit_lib/proto/: __init__.py  collector.py  message.py  protocol.py
bit_lib/bit_lib/services/: __init__.py  _client.py  _host.py  base.py  discovery.py  dispatcher.py  maintenance.py
bit_lib/bit_lib/settings/: __init__.py  base.py
bit_lib/bit_lib/tools/: __init__.py  controller.py  descriptor.py  subscribe.py
bit_lib/docs/: MODELS.md  PROTOCOL.md
client/: Dockerfile  README.md  config.ini  main.py  pyproject.toml
client/client/: __init__.py
client/client/connection/: protocol.py
client/client/core/: file_mng.py  tracker_manager.py
client/client/gui/: client.py
client/client/hooks/: __init__.py
client/client/services/: client.py
client/const/: __init__.py  crud_tmp.py  dta_tmp.py  env.py  env_def.py  keys.py  settings.py  torrent_client.py
client/docs/: ARCHITECTURE.md
client/src/cli/: cli_direct.py  cli_main.py  cli_simple.py  cli_standalone.py  create_torrent.py
client/src/client/: __init__.py  client_standalone.py
client/src/config/: config_mng.py  utils.py
client/src/connection/: __init__.py  network.py  peer_conn.py  protocol.py
client/src/const/: __init__.py  bsc_tmp.py  config.py  crud_tmp.py  default.py  env.py
client/src/core/: file_downloader.py  file_mng.py  torrent_client.py  tracker_manager.py
client/src/gui/: client.py
client/src/interface/: __init__.py  chunk_info.py  download.py  download_progress.py  file_downloader.py  torrent_data.py
client/src/styles/: container.py
client/src/templates/: __init__.py  crud_tmp.py
client/src/views/: __init__.py  client.py  file.py  torrent.py  torrent_client.py
client/src/widgets/: filter_panel.py
client/tests/: test_client_basic.py  test_functional_complete.py  test_gui_complete.py  test_gui_imports.py  test_gui_methods.py  test_gui_structure.py
client/torrent_client/: __init__.py  client.py  config_manager.py  torrent_client.py
client/torrents/: archivo_grande.bin.p2p  archivo_grande_5G.bin.p2p  pyproject.toml.p2p
server/: main.py  pyproject.toml
tests/: README_E2E_GUI.md  README_TEST_E2E.md  TEST_GUIDE.md  docker-compose-4trackers.yml  docker-compose-5trackers.yml  docker-compose-6trackers.yml  docker-compose-e2e-gui.yml  docker-compose.yml  env_wizard.py  env_wizard_state.json  pyproject.toml  quick_test.py  setup_e2e_gui.sh  start_4trackers.sh  test-cluster.sh  test_e2e_gui_complete.py  test_e2e_simple.py  test_fault_tolerance_6trackers.py  test_replication_5trackers.py  test_replication_cli.py
tests/configs/: tracker-1.json  tracker-2.json
tests/tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tracker/: Dockerfile  MANIFEST.yml  __init__.py  main.py  pyproject.toml  tracker.db  tracker.py
tracker/const/: __init__.py  c_env.py  env.py  env_def.py  k_env.py  settings.py
tracker/containers/: __init__.py  dispatcher.py  gateways.py  handler.py  repos.py  server.py
tracker/core/: __init__.py  bsc_hds.py
tracker/database/: __init__.py  _gateway.py  database.py
tracker/docs/: ARCHITECTURE.md  REPLICATION.md
tracker/handlers/: __init__.py  _handler.py  dtos.py  registry.py  session.py  tracker.py
tracker/models/: torrent.py
tracker/repos/: __init__.py  _repo.py  manager.py  peer_repo.py  repository.py  torrent_repo.py
tracker/schema/: __init__.py  dtos.py  entity.py
tracker/schemas/: __init__.py  entity.py  torrent.py
tracker/server/: tracker.py
tracker/services/: _services.py  tracker.py
tracker/settings/: __init__.py  config.py  database.py  defaults.py  services.py
tracker/src/: app.py
tracker/tests/: base_hdl.py  conftest.py  handler_tests.py  hdl_test.py
(+152 files in other folders)
