[project]
name = "client"
version = "0.1.0"
description = "Cliente BitTorrent P2P con GUI y CLI"
readme = "README.md"
authors = [{ name = "tonycp", email = "tonycadahia@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "bencodepy>=0.9.5",
    "dataclass-mapper>=1.9.3",
    "debugpy>=1.8.17",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "humanize>=4.14.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.6",
    "tk>=0.1.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
libs = [
    "bit-lib>=0.1.0"
]

[tool.uv.sources]
bit-lib = { path = "../bit_lib", editable = true } 

[project.scripts]
client = "src.cli.cli_standalone:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"
