[project]
name = "Bit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "tonycp", email = "tonycadahia@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.8.0",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "asyncio>=4.0.0",
    "dataclass-mapper>=1.9.3",
    "dependency-injector[yaml,yml]>=4.48.2",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.6",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pydantic-settings-logging>=0.1.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "tk>=0.1.0",
]

[project.optional-dependencies]
libs = [
    "bit-lib>=0.1.0"
]

[tool.uv.sources]
bit-lib = { path = "../bit_lib", editable = true } 

[project.scripts]
app = "src.app:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"
